reaper-lib/src/snapshots/reaper_lib__stun__tests__base_preds_match.snap
---
source: src/stun.rs
expression: base_preds
---
[
    True,
    Eq {
        left: Field(
            Field {
                name: "hello",
                table: "t1",
            },
        ),
        right: Field(
            Field {
                name: "hello",
                table: "t1",
            },
        ),
    },
    Lt {
        left: Field(
            Field {
                name: "hello",
                table: "t1",
            },
        ),
        right: Field(
            Field {
                name: "hello",
                table: "t1",
            },
        ),
    },
    Eq {
        left: Field(
            Field {
                name: "hello",
                table: "t1",
            },
        ),
        right: Field(
            Field {
                name: "world",
                table: "t2",
            },
        ),
    },
    Lt {
        left: Field(
            Field {
                name: "hello",
                table: "t1",
            },
        ),
        right: Field(
            Field {
                name: "world",
                table: "t2",
            },
        ),
    },
    Eq {
        left: Field(
            Field {
                name: "hello",
                table: "t1",
            },
        ),
        right: Int {
            value: 1,
        },
    },
    Lt {
        left: Field(
            Field {
                name: "hello",
                table: "t1",
            },
        ),
        right: Int {
            value: 1,
        },
    },
    Eq {
        left: Field(
            Field {
                name: "hello",
                table: "t1",
            },
        ),
        right: Int {
            value: -1,
        },
    },
    Lt {
        left: Field(
            Field {
                name: "hello",
                table: "t1",
            },
        ),
        right: Int {
            value: -1,
        },
    },
    Eq {
        left: Field(
            Field {
                name: "world",
                table: "t2",
            },
        ),
        right: Field(
            Field {
                name: "world",
                table: "t2",
            },
        ),
    },
    Lt {
        left: Field(
            Field {
                name: "world",
                table: "t2",
            },
        ),
        right: Field(
            Field {
                name: "world",
                table: "t2",
            },
        ),
    },
    Eq {
        left: Field(
            Field {
                name: "world",
                table: "t2",
            },
        ),
        right: Int {
            value: 1,
        },
    },
    Lt {
        left: Field(
            Field {
                name: "world",
                table: "t2",
            },
        ),
        right: Int {
            value: 1,
        },
    },
    Eq {
        left: Field(
            Field {
                name: "world",
                table: "t2",
            },
        ),
        right: Int {
            value: -1,
        },
    },
    Lt {
        left: Field(
            Field {
                name: "world",
                table: "t2",
            },
        ),
        right: Int {
            value: -1,
        },
    },
    Eq {
        left: Int {
            value: 1,
        },
        right: Int {
            value: 1,
        },
    },
    Lt {
        left: Int {
            value: 1,
        },
        right: Int {
            value: 1,
        },
    },
    Eq {
        left: Int {
            value: 1,
        },
        right: Int {
            value: -1,
        },
    },
    Lt {
        left: Int {
            value: 1,
        },
        right: Int {
            value: -1,
        },
    },
    Eq {
        left: Int {
            value: -1,
        },
        right: Int {
            value: -1,
        },
    },
    Lt {
        left: Int {
            value: -1,
        },
        right: Int {
            value: -1,
        },
    },
]
