reaper-lib/src/snapshots/reaper_lib__stun__tests__growing_preds_match.snap
---
source: src/stun.rs
expression: grown
---
[
    And {
        left: Lt {
            left: Int {
                value: 1,
            },
            right: Int {
                value: 2,
            },
        },
        right: Lt {
            left: Int {
                value: 1,
            },
            right: Int {
                value: 2,
            },
        },
    },
    And {
        left: Lt {
            left: Int {
                value: 1,
            },
            right: Int {
                value: 2,
            },
        },
        right: Lt {
            left: Field(
                Field {
                    name: "hello",
                    table: "t",
                },
            ),
            right: Field(
                Field {
                    name: "world",
                    table: "t",
                },
            ),
        },
    },
    And {
        left: Lt {
            left: Int {
                value: 1,
            },
            right: Int {
                value: 2,
            },
        },
        right: True,
    },
    And {
        left: Lt {
            left: Field(
                Field {
                    name: "hello",
                    table: "t",
                },
            ),
            right: Field(
                Field {
                    name: "world",
                    table: "t",
                },
            ),
        },
        right: Lt {
            left: Int {
                value: 1,
            },
            right: Int {
                value: 2,
            },
        },
    },
    And {
        left: Lt {
            left: Field(
                Field {
                    name: "hello",
                    table: "t",
                },
            ),
            right: Field(
                Field {
                    name: "world",
                    table: "t",
                },
            ),
        },
        right: Lt {
            left: Field(
                Field {
                    name: "hello",
                    table: "t",
                },
            ),
            right: Field(
                Field {
                    name: "world",
                    table: "t",
                },
            ),
        },
    },
    And {
        left: Lt {
            left: Field(
                Field {
                    name: "hello",
                    table: "t",
                },
            ),
            right: Field(
                Field {
                    name: "world",
                    table: "t",
                },
            ),
        },
        right: True,
    },
]
